fix alignement on navbar before and after

--- a/site/src/components/navbar/navBar.css
+++ b/site/src/components/navbar/navBar.css
@@ -11,11 +11,11 @@ nav {
 }
 
 nav::before {
-  left: 0.5em;
+  left: 0.0em;
 }
 
 nav::after {
-  right: 0.5em;
+  right: 0.0em;
 }
 
 nav::before,
@@ -26,7 +26,7 @@ nav::after {
   position: absolute;
   display: block;
   background: var(--dawson-blue);
-  top: 4em;
+  top: 3.5em;
 }
 
 nav ul {
